--- a/tox.ini
+++ b/tox.ini
@@ -110,7 +110,7 @@ deps =
 commands =
     docker run --rm --name {[base]name} -p8000:8000 \
     -e DEBUG=true -e LOGGING_LEVEL=DEBUG \
-    -v {env:HOME}/tmp/data:/data:ro \
+    -v /home/zisis:/home/zisis \
     --cap-add SYS_PTRACE \
     {[base]name}
 allowlist_externals = docker
