[NSETM-2202] Add synthesis-with-resources endpoint

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ ignore_basepython_conflict = true
 
 [testenv]
 basepython=python3.10
+passenv = NEXUS_TOKEN
 setenv =
     PIP_INDEX_URL = https://bbpteam.epfl.ch/repository/devpi/simple
     LOGGING_LEVEL = DEBUG
@@ -110,7 +111,6 @@ deps =
 commands =
     docker run --rm --name {[base]name} -p8000:8000 \
     -e DEBUG=true -e LOGGING_LEVEL=DEBUG \
-    -v /home/zisis:/home/zisis \
     --cap-add SYS_PTRACE \
     {[base]name}
 allowlist_externals = docker
