--- a/requirements.txt
+++ b/requirements.txt
@@ -6,38 +6,62 @@
 #
 --index-url https://bbpteam.epfl.ch/repository/devpi/simple
 
-anyio==3.6.2
+anyio==3.7.0
     # via
     #   starlette
     #   watchfiles
+asttokens==2.2.1
+    # via devtools
 attrs==23.1.0
-    # via jsonschema
+    # via
+    #   entity-management
+    #   jsonschema
 cached-property==1.5.2
     # via tmd
+certifi==2023.5.7
+    # via requests
+charset-normalizer==3.1.0
+    # via requests
 click==8.1.3
     # via
     #   diameter-synthesis
     #   neurom
     #   uvicorn
-contourpy==1.0.7
+contourpy==1.1.0
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
+deprecation==2.1.0
+    # via python-keycloak
+devtools[pygments]==0.11.0
+    # via entity-management
 diameter-synthesis==0.5.4
     # via neurots
-fastapi==0.95.2
+ecdsa==0.18.0
+    # via python-jose
+entity-management==1.2.19
     # via morphology-synthesis (pyproject.toml)
-fonttools==4.39.4
+exceptiongroup==1.1.1
+    # via anyio
+executing==1.2.0
+    # via devtools
+fastapi==0.98.0
+    # via morphology-synthesis (pyproject.toml)
+fonttools==4.40.0
     # via matplotlib
 h11==0.14.0
     # via uvicorn
-h5py==3.8.0
+h5py==3.9.0
     # via tmd
 httptools==0.5.0
     # via uvicorn
 idna==3.4
-    # via anyio
-joblib==1.2.0
+    # via
+    #   anyio
+    #   requests
+isodate==0.6.1
+    # via rdflib
+joblib==1.3.0
     # via scikit-learn
 jsonschema==4.17.3
     # via
@@ -50,7 +74,7 @@ matplotlib==3.7.1
     #   diameter-synthesis
     #   neurom
     #   neurots
-morphio==3.3.4
+morphio==3.3.5
     # via
     #   diameter-synthesis
     #   neurom
@@ -62,9 +86,9 @@ neurom==3.2.2
     # via
     #   diameter-synthesis
     #   neurots
-neurots==3.3.2
+neurots==3.4.0
     # via morphology-synthesis (pyproject.toml)
-numpy==1.24.3
+numpy==1.25.0
     # via
     #   contourpy
     #   diameter-synthesis
@@ -78,27 +102,44 @@ numpy==1.24.3
     #   scipy
     #   tmd
 packaging==23.1
-    # via matplotlib
-pandas==2.0.1
+    # via
+    #   deprecation
+    #   matplotlib
+pandas==2.0.3
     # via
     #   diameter-synthesis
     #   neurom
 pillow==9.5.0
     # via matplotlib
-pydantic==1.10.7
+pyasn1==0.5.0
+    # via
+    #   python-jose
+    #   rsa
+pydantic==1.10.9
     # via
     #   fastapi
     #   morphology-synthesis (pyproject.toml)
-pyparsing==3.0.9
-    # via matplotlib
+pygments==2.15.1
+    # via devtools
+pyjwt==2.7.0
+    # via entity-management
+pyparsing==3.1.0
+    # via
+    #   matplotlib
+    #   rdflib
 pyrsistent==0.19.3
     # via jsonschema
 python-dateutil==2.8.2
     # via
+    #   entity-management
     #   matplotlib
     #   pandas
 python-dotenv==1.0.0
     # via uvicorn
+python-jose==3.3.0
+    # via python-keycloak
+python-keycloak==3.3.0
+    # via entity-management
 pytz==2023.3
     # via pandas
 pyyaml==6.0
@@ -106,9 +147,22 @@ pyyaml==6.0
     #   morphology-synthesis (pyproject.toml)
     #   neurom
     #   uvicorn
+rdflib==6.3.2
+    # via
+    #   entity-management
+    #   sparqlwrapper
+requests==2.31.0
+    # via
+    #   entity-management
+    #   python-keycloak
+    #   requests-toolbelt
+requests-toolbelt==1.0.0
+    # via python-keycloak
+rsa==4.9
+    # via python-jose
 scikit-learn==1.2.2
     # via tmd
-scipy==1.10.1
+scipy==1.11.1
     # via
     #   diameter-synthesis
     #   neurom
@@ -116,9 +170,15 @@ scipy==1.10.1
     #   scikit-learn
     #   tmd
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   asttokens
+    #   ecdsa
+    #   isodate
+    #   python-dateutil
 sniffio==1.3.0
     # via anyio
+sparqlwrapper==2.0.0
+    # via entity-management
 starlette==0.27.0
     # via fastapi
 threadpoolctl==3.1.0
@@ -127,10 +187,12 @@ tmd==2.3.1
     # via neurots
 tqdm==4.65.0
     # via neurom
-typing-extensions==4.6.0
+typing-extensions==4.7.0
     # via pydantic
 tzdata==2023.3
     # via pandas
+urllib3==2.0.3
+    # via requests
 uvicorn[standard]==0.22.0
     # via morphology-synthesis (pyproject.toml)
 uvloop==0.17.0
