--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [base]
 name = morphology-synthesis
 path = src/app
-pip_compile = python -m piptools compile --resolver=backtracking -o requirements.txt pyproject.toml
+pip_compile = python -m piptools compile --resolver=backtracking --strip-extras -o requirements.txt pyproject.toml
 pip_compile_check = {[base]pip_compile} --dry-run 2>&1 | grep -v Dry-run | diff requirements.txt -
 
 [tox]
