--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "morphology-synthesis"
-version = "2023.07.11"
+version = "2023.09.13"
 description = "morphology-synthesis web API"
 readme = "README.rst"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi",
     "neurots",
-    "pydantic",
+    "pydantic>=2.0",
     "pyyaml",
     "entity-management>=1.2.20",
     "uvicorn[standard]",
