--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,11 @@ pip_compile_check = {[base]pip_compile} --dry-run 2>&1 | grep -v Dry-run | diff 
 minversion = 4
 isolated_build = true
 ignore_basepython_conflict = true
+envlist =
+    lint
+    docs
+    check-packaging
+    py{310, 311, 312}
 
 [testenv]
 passenv = NEXUS_TOKEN
@@ -129,3 +134,9 @@ ignore = E203,E731,W503,W504,E501
 # D202: no blank line after docstring (handled by black, causes an issue if first line is '#pylint:disable')
 add-ignore = D413,D100,D103,D104,D202
 convention = google
+
+
+[gh-actions]
+    3.10: py310, lint
+    3.11: py311
+    3.12: py312
