--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tox-env: ['py3', 'check-packaging', 'lint', 'docs']
+        tox-env: ['py310', 'py311', 'py312']
 
     steps:
 
@@ -33,7 +33,7 @@ jobs:
         pip install tox-gh-actions
 
     - name: Run tox
-      run: tox -e ${{ matrix.tox-env }}
+      run: tox
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
