--- a/tox.ini
+++ b/tox.ini
@@ -23,13 +23,15 @@ extras =
 deps =
     -r requirements.txt
     httpx
-    pytest
-    pytest-cov[all]
-    coverage[toml]
+    pytest-cov>=3
 commands =
-    python -m pytest -vv --cov=app tests/ {posargs}
-    coverage xml
-    coverage html
+    python -m pytest \
+        -vv \
+        --cov=app \
+        --cov-report term-missing \
+        --cov-report=xml \
+        --no-cov-on-fail \
+        {posargs}
 
 [testenv:check-packaging]
 skip_install = true
