--- a/tox.ini
+++ b/tox.ini
@@ -7,13 +7,15 @@ pip_compile_check = {[base]pip_compile} --dry-run 2>&1 | grep -v Dry-run | diff 
 [tox]
 minversion = 4
 isolated_build = true
-ignore_basepython_conflict = true
+envlist =
+    lint
+    docs
+    check-packaging
+    py{310, 311, 312}
 
 [testenv]
-basepython=python3.10
 passenv = NEXUS_TOKEN
 setenv =
-    PIP_INDEX_URL = https://bbpteam.epfl.ch/repository/devpi/simple
     LOGGING_LEVEL = DEBUG
     DEBUG = true
 extras =
@@ -21,13 +23,15 @@ extras =
 deps =
     -r requirements.txt
     httpx
-    pytest
-    pytest-cov[all]
-    coverage[toml]
+    pytest-cov>=3
 commands =
-    python -m pytest -vv --cov=app tests/ {posargs}
-    coverage xml
-    coverage html
+    python -m pytest \
+        -vv \
+        --cov=app \
+        --cov-report term-missing \
+        --cov-report=xml \
+        --no-cov-on-fail \
+        {posargs}
 
 [testenv:check-packaging]
 skip_install = true
@@ -131,3 +135,9 @@ ignore = E203,E731,W503,W504,E501
 # D202: no blank line after docstring (handled by black, causes an issue if first line is '#pylint:disable')
 add-ignore = D413,D100,D103,D104,D202
 convention = google
+
+
+[gh-actions]
+    3.10: py310, lint
+    3.11: py311
+    3.12: py312
